# fib

./: README.md  pyproject.toml
fib/: fibnumber.py  fibseries.py
tests/: test_fib.py
